list style and text decoration removed from anchor tag and li tag respectively

--- a/src/styles.css
+++ b/src/styles.css
@@ -26,4 +26,12 @@ img {
 
 body {
   background-color: var(--white);
+}
+
+a {
+  text-decoration: none;
+}
+
+li {
+  list-style: none;
 }/*# sourceMappingURL=styles.css.map */
