--- a/src/app/landing-page/home/home.component.scss
+++ b/src/app/landing-page/home/home.component.scss
@@ -11,10 +11,11 @@
   
     .home {
       position: relative;
+      height: 100vh;
 
       header {
         position: absolute;
-        top: 4%;
+        top: 3%;
         left: 3%;
         width: 93%;
         display: flex;
@@ -92,6 +93,124 @@
               }
           }
         }
+
+        .menu {
+          display: none;
+        }
+      }
+
+      .home-content {
+        position: absolute;
+        top: 30%;
+        left: 7%;
+
+        .guide {
+          display: flex;
+          flex-direction: column;
+          gap: 1rem;
+          color: #fff;
+
+          h5 {
+            text-transform: uppercase;
+            margin-bottom: 0.5rem;
+          }
+
+          h2 {
+            text-transform: uppercase;
+            font-size: 3rem;
+            font-weight: 700;
+          }
+
+          h6 {
+            font-size: 0.875rem;
+          }
+
+          .browse {
+            display: flex;
+            align-items: center;
+            gap: 0.625rem;
+            font-weight: 700;
+            margin-top: 1rem;
+
+            a {
+              color: #E7C873;
+            }
+          }
+        }
+      }
+
+      .badge {
+        width: 40%;
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        padding: 2% 4%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        color: #1A1A1A;
+        background-color: #E7C873;
+        border: none;
+        border-radius: 0 3.125rem 0 0;
+
+        h4 {
+          font-weight: 700;
+          font-size: 1.5rem;
+          margin-bottom: 0.25rem;
+        }
+
+        h6 {
+          font-size: 0.8rem;
+          font-weight: 400;
+        }
       }
     }
 }  
+
+@media screen and (max-width: 998px)  {
+  .container {
+    width: 100%;
+
+    .home {
+      height: auto;
+  
+      header {
+        width: 100%;
+        left: 0;
+        top: 0;
+        border-radius: 0;
+        overflow: auto;
+
+        nav a {
+          display: none;
+        }
+
+        .image {
+          position: absolute;
+        }
+
+        .profile {
+          display: none;
+        }
+
+        .menu {
+          display: block;
+          cursor: pointer;
+          transition: 0.3s ease-in;
+        }
+      }
+
+      .badge {
+        width: 65%;
+
+        h4 {
+          font-size: 1.2rem;
+        }
+
+        h6 {
+          font-size: 0.5rem;
+        }
+      }
+    }
+  }
+}
