navigation links updated to use href for in page navigation

--- a/src/app/landing-page/home/home.component.html
+++ b/src/app/landing-page/home/home.component.html
@@ -7,10 +7,10 @@
         </div>
         <header>
             <nav>
-                <a routerLink="">Home</a>
-                <a routerLink="#about_us">About us</a>
-                <a routerLink="#listing">Listing</a>
-                <a routerLink="#testimonial">Testimonial</a>
+                <a href="">Home</a>
+                <a href="#about_us">About us</a>
+                <a href="#listing">Listing</a>
+                <a href="#testimonial">Testimonial</a>
             </nav>
             <div class="image">
                 <img [src]="logo" alt="logo">
@@ -54,4 +54,5 @@
             </span>
         </div>
     </div>
+    <app-about id="about_us"/>
 </div>
