listing component template defined with featured contents of home listing

--- a/src/app/landing-page/listing/listing.component.html
+++ b/src/app/landing-page/listing/listing.component.html
@@ -3,7 +3,7 @@
         <h2>Featured properties</h2>
         <p>
             Discover our hand-picked selection of the most desirable properties on the market. 
-            Each featured property offers unique charm, exceptional amenities, and prime locations. 
+            Each featured property offers unique charm, exceptional amenities, <br> and prime locations. 
             Explore these top listings to find your dream home today. 
         </p>
    </div>
@@ -18,7 +18,7 @@
         <app-listing-card/>
    </div>
    <button routerLink="properties" type="button" class="listing-btn">
-    See All Listing
-    <img src="black-right-arrow.svg" alt="right-arrow">
-</button>
+        See All Listing
+        <img src="black-right-arrow.svg" alt="right-arrow">
+    </button>
 </div>
