slash / added to routerlink route

--- a/src/app/landing-page/listing/listing.component.html
+++ b/src/app/landing-page/listing/listing.component.html
@@ -17,7 +17,7 @@
         <app-listing-card/>
         <app-listing-card/>
    </div>
-   <button routerLink="properties" type="button" class="listing-btn">
+   <button routerLink="/properties" type="button" class="listing-btn">
         See All Listing
         <img src="black-right-arrow.svg" alt="right-arrow">
     </button>
