--- a/src/app/landing-page/home/home.component.html
+++ b/src/app/landing-page/home/home.component.html
@@ -5,7 +5,7 @@
                [images]="[image_one, image_two, image_three, image_four]"
             />
         </div>
-        <header>
+        <header id="header">
             <nav>
                 <a href="">Home</a>
                 <a href="#about_us">About us</a>
@@ -60,4 +60,5 @@
     <app-discover/>
     <app-testimonial id="testimonial"/>
     <app-footer/>
+    <app-back-to-top/> 
 </div>
