--- a/src/app/landing-page/home/home.component.scss
+++ b/src/app/landing-page/home/home.component.scss
@@ -9,162 +9,173 @@
   display: flex;
   flex-direction: column;
   
-    .home {
-      position: relative;
-      height: 100vh;
+  .home {
+    position: relative;
+    height: 100vh;
 
-      header {
-        position: absolute;
-        top: 3%;
-        left: 3%;
-        width: 93%;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        overflow: hidden;
-        background-color: #f9fafb;
-        border: none;
-        border-radius: 6.25rem;
-        height: 3.75rem;
-        padding: 0 2rem;
-  
-        nav a {
-          display: inline-block;
-          padding: 0 10px;
-          margin: 0 10px;
-          cursor: pointer;
-          position: relative;
-          color: #1A1A1A;
-  
-          &::after {
-              content: '';
-              width: 0;
-              height: 3px;
-              background: #1A1A1A;
-              position: absolute;
-              left: 0;
-              bottom: -10px;
-              display: inline-block;
-              transition: 0.5s ease-in-out;
-          }
-      
-          &:hover::after {
-              width: 100%;
-          }
-        }
-  
-        .image {
-          max-width: 8.125rem;
+    header {
+      position: absolute;
+      top: 3%;
+      left: 3%;
+      width: 93%;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      overflow: hidden;
+      background-color: #f9fafb;
+      border: none;
+      border-radius: 6.25rem;
+      height: 3.75rem;
+      padding: 0 2rem;
+      transition: padding 0.3s ease-in-out, position 0.3s ease-in-out;
+
+      nav a {
+        display: inline-block;
+        padding: 0 10px;
+        margin: 0 10px;
+        cursor: pointer;
+        position: relative;
+        color: #1A1A1A;
+
+        &::after {
+            content: '';
+            width: 0;
+            height: 3px;
+            background: #1A1A1A;
+            position: absolute;
+            left: 0;
+            bottom: -10px;
+            display: inline-block;
+            transition: 0.5s ease-in-out;
         }
     
-        .profile {
+        &:hover::after {
+            width: 100%;
+        }
+      }
+
+      .image {
+        max-width: 8.125rem;
+      }
+  
+      .profile {
+        @extend %common-profile-styles;
+        gap: 2rem;
+  
+        span {
           @extend %common-profile-styles;
-          gap: 2rem;
-    
-          span {
+          gap: 0.625rem;
+  
+          p {
+            color: #1A1A1A;
+            font-weight: 500;
+          }
+        }
+
+        .button {
             @extend %common-profile-styles;
             gap: 0.625rem;
-    
-            p {
-              color: #1A1A1A;
-              font-weight: 500;
-            }
-          }
-  
-          .button {
-              @extend %common-profile-styles;
-              gap: 0.625rem;
-  
-              .btn {
-                  background-color: transparent;
-                  color: #1A1A1A;
-                  padding: 0.625rem 2rem;
-                  border: 1px solid #1A1A1A;
-                  border-radius: 3.125rem;
-                  cursor: pointer;
-                  font-weight: 500;
-                  transition: .3s ease-in-out;
-  
-                  &:hover {
-                      background-color: #1A1A1A;
-                      color: #fff;
-                      border: 1px solid #fff;
-                  }
-              }
-          }
-        }
 
-        .menu {
-          display: none;
+            .btn {
+                background-color: transparent;
+                color: #1A1A1A;
+                padding: 0.625rem 2rem;
+                border: 1px solid #1A1A1A;
+                border-radius: 3.125rem;
+                cursor: pointer;
+                font-weight: 500;
+                transition: .3s ease-in-out;
+
+                &:hover {
+                    background-color: #1A1A1A;
+                    color: #fff;
+                    border: 1px solid #fff;
+                }
+            }
         }
       }
 
-      .home-content {
-        position: absolute;
-        top: 30%;
-        left: 7%;
-
-        .guide {
-          display: flex;
-          flex-direction: column;
-          gap: 1rem;
-          color: #fff;
-
-          h5 {
-            text-transform: uppercase;
-            margin-bottom: 0.5rem;
-          }
-
-          h2 {
-            text-transform: uppercase;
-            font-size: 3rem;
-            font-weight: 700;
-          }
-
-          h6 {
-            font-size: 0.875rem;
-          }
-
-          .browse {
-            display: flex;
-            align-items: center;
-            gap: 0.625rem;
-            font-weight: 700;
-            margin-top: 1rem;
-
-            a {
-              color: #E7C873;
-            }
-          }
-        }
+      .menu {
+        display: none;
       }
+    }
 
-      .badge {
-        width: 40%;
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        padding: 1.5% 4%;
+    header.scrolled {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      z-index: 50;
+      border-radius: 0;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
+
+    .home-content {
+      position: absolute;
+      top: 30%;
+      left: 7%;
+
+      .guide {
         display: flex;
-        align-items: center;
-        justify-content: space-between;
-        color: #1A1A1A;
-        background-color: #E7C873;
-        border: none;
-        border-radius: 0 3.125rem 0 0;
+        flex-direction: column;
+        gap: 1rem;
+        color: #fff;
 
-        h4 {
+        h5 {
+          text-transform: uppercase;
+          margin-bottom: 0.5rem;
+        }
+
+        h2 {
+          text-transform: uppercase;
+          font-size: 3rem;
           font-weight: 700;
-          font-size: 1.5rem;
-          margin-bottom: 0.25rem;
         }
 
         h6 {
-          font-size: 0.8rem;
-          font-weight: 400;
+          font-size: 0.875rem;
+        }
+
+        .browse {
+          display: flex;
+          align-items: center;
+          gap: 0.625rem;
+          font-weight: 700;
+          margin-top: 1rem;
+
+          a {
+            color: #E7C873;
+          }
         }
       }
     }
+
+    .badge {
+      width: 40%;
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      padding: 1.5% 4%;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      color: #1A1A1A;
+      background-color: #E7C873;
+      border: none;
+      border-radius: 0 3.125rem 0 0;
+
+      h4 {
+        font-weight: 700;
+        font-size: 1.5rem;
+        margin-bottom: 0.25rem;
+      }
+
+      h6 {
+        font-size: 0.8rem;
+        font-weight: 400;
+      }
+    }
+  }
 }  
 
 @media screen and (max-width: 998px)  {
