--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -1,3 +1,5 @@
+@import '../../../styles.scss';
+
 .container {
     position: relative;
     max-width: 100%;
@@ -5,12 +7,12 @@
     height: 100vh;
 
     .loading {
-        color: #fff;
+        color: $white;
         font-size: 1.25rem;
     }
 
     .image-bg {
-        background-color: #1A1A1A;
+        background-color: $primary;
         height: 100%; 
 
         img {
@@ -18,40 +20,39 @@
             object-fit: cover;
             height: 100%;
             opacity: 0.4;
-            filter: blur(0.25rem);
         }
     }
 
     .login-container {
         position: absolute;
-        top: 10%;
+        top: 15%;
         right: 5%;
-        background-color: #f9fafb;
-        width: 450px;
+        background-color: $header;
+        width: 28.125rem;
         height: auto;
         padding: 2.5rem 2rem;
         border: none;
         border-radius: 0.375rem;
 
         .header {
-            display: flex;
-            align-items: center;
+            @include flex-center;
             flex-direction: column;
             margin-bottom: 10px;
 
-            img {
-                margin-bottom: 10px;
+            .logo {
+                max-width: 8.125rem;
+                margin-bottom: 0.625rem;
             }
 
             h2 {
-                color: #1A1A1A;
+                color: $primary;
                 font-weight: 700;
                 font-size: 1.25rem;
                 margin-bottom: 3px;
             }
 
             p {
-                color: #667085;
+                color: $secondary;
                 font-size: 0.875rem;
             }
         }
@@ -70,25 +71,25 @@
                 label {
                     font-weight: 500;
                     span {
-                        color: #ef4444;
+                        color: $orange;
                     }
                 }
 
                 input {
-                    padding: 0.625rem 0.875rem;
+                    padding: 0.875rem;
                     border: 1px solid #d0d5dd;
                     border-radius: 0.375rem;
-                    color: #1A1A1A;
-                    caret-color: #1A1A1A;
+                    color: $primary;
+                    caret-color: $primary;
 
                     &:focus {
                         outline: none;
-                        border: 1px solid #1A1A1A;
+                        border: 1px solid $primary;
                     }
 
                     &:hover {
                         cursor: pointer;
-                        border: 1px solid #1A1A1A;
+                        border: 1px solid $primary;
                     }
 
                     
@@ -97,9 +98,7 @@
                 .error {
                     color: #ef4444;
                     font-size: 0.75rem;
-                    display: flex;
-                    align-items: center;
-                    justify-content: space-between;
+                    @include justify-between;
                 }
 
                 .eye-icon {
@@ -117,26 +116,26 @@
 
             button {
                 margin-top: 0.625rem;
-                background-color: #1A1A1A;
-                color: #fff;
-                padding: 0.625rem 0.875rem;
+                background-color: $primary;
+                color: $white;
+                padding: 0.875rem;
                 border: none;
                 border-radius: 0.375rem;
                 cursor: pointer;
                 font-weight: 500;
 
                 &:hover {
-                    background-color: #1a1a1ada;
+                    background-color: $secondary;
                 }
             }
 
             p {
-                color: #667085;
+                color: $secondary;
                 font-size: 0.875rem;
                 text-align: center;
 
                 span {
-                    color: #1A1A1A;
+                    color: $primary;
                     font-weight: 600;
                     cursor: pointer;
                 }
