--- a/src/app/auth/register/register.component.scss
+++ b/src/app/auth/register/register.component.scss
@@ -1,16 +1,17 @@
+@import '../../../styles.scss';
+
 .container {
     position: relative;
     max-width: 100%;
-    // overflow: hidden;
     height: 100vh;
 
     .loading {
-        color: #fff;
+        color: $white;
         font-size: 1.25rem;
     }
 
     .image-bg {
-        background-color: #1A1A1A;
+        background-color: $primary;
         height: 100%; 
 
         img {
@@ -18,40 +19,39 @@
             object-fit: cover;
             height: 100%;
             opacity: 0.4;
-            filter: blur(0.25rem);
         }
     }
 
     .login-container {
         position: absolute;
-        top: 2.5%;
+        top: 5%;
         right: 5%;
-        background-color: #f9fafb;
-        width: 450px;
+        background-color: $header;
+        width: 28.125rem;
         height: auto;
         padding: 1.2rem 2rem;
         border: none;
         border-radius: 0.375rem;
 
         .header {
-            display: flex;
-            align-items: center;
+            @include flex-center;
             flex-direction: column;
-            margin-bottom: 10px;
+            margin-bottom: 0.625rem;
 
-            img {
-                margin-bottom: 10px;
+            .logo {
+                max-width: 8.125rem;
+                margin-bottom: 0.625rem;
             }
 
             h2 {
-                color: #1A1A1A;
+                color: $primary;
                 font-weight: 700;
                 font-size: 1.25rem;
-                margin-bottom: 3px;
+                margin-bottom: 0.188rem;
             }
 
             p {
-                color: #667085;
+                color: $secondary;
                 font-size: 0.875rem;
             }
         }
@@ -70,34 +70,32 @@
                 label {
                     font-weight: 500;
                     span {
-                        color: #ef4444;
+                        color: $orange;
                     }
                 }
 
                 input {
-                    padding: 0.625rem 0.875rem;
+                    padding: 0.875rem;
                     border: 1px solid #d0d5dd;
                     border-radius: 0.375rem;
-                    color: #1A1A1A;
-                    caret-color: #1A1A1A;
+                    color: $primary;
+                    caret-color: $primary;
 
                     &:focus {
                         outline: none;
-                        border: 1px solid #1A1A1A;
+                        border: 1px solid $primary;
                     }
 
                     &:hover {
                         cursor: pointer;
-                        border: 1px solid #1A1A1A;
+                        border: 1px solid $primary;
                     }
                 }
 
                 .error {
-                    color: #ef4444;
+                    color: $orange;
                     font-size: 0.75rem;
-                    display: flex;
-                    align-items: center;
-                    justify-content: space-between;
+                    @include justify-between;
                 }
 
                 .eye-icon {
@@ -111,55 +109,29 @@
                         width: 50%;
                     }
                 }
-
-                .profile {
-                    margin-top: 0.375rem;
-                }
-
-                .file {
-                    padding: 0.375rem;
-                    background-color: #fff;
-                    font-size: 0.875rem;
-                }
-
-                ::-webkit-file-upload-button {
-                    color: #fff;
-                    background: #1A1A1A;
-                    padding: 0.375rem 1rem;
-                    margin-right: 1rem;
-                    border: none;
-                    border-radius: 0.375rem;
-                    font-size: 0.75rem;
-                    cursor: pointer;
-                    outline: none;
-                
-                    &:hover {
-                        background-color: #1F4B43;
-                    }
-                }
             }
 
             button {
-                background-color: #1A1A1A;
-                color: #fff;
-                padding: 0.625rem 0.875rem;
+                background-color: $primary;
+                color: $white;
+                padding: 0.875rem;
                 border: none;
                 border-radius: 0.375rem;
                 cursor: pointer;
                 font-weight: 500;
 
                 &:hover {
-                    background-color: #1a1a1ada;
+                    background-color: $secondary;
                 }
             }
 
             p {
-                color: #667085;
+                color: $secondary;
                 font-size: 0.875rem;
                 text-align: center;
 
                 span {
-                    color: #1A1A1A;
+                    color: $primary;
                     font-weight: 600;
                     cursor: pointer;
                 }
