--- a/src/app/landing-page/discover/discover.component.scss
+++ b/src/app/landing-page/discover/discover.component.scss
@@ -1,13 +1,13 @@
+@import '../../../styles.scss';
+
 .discover {
+    @include justify-center;
     max-width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     flex-direction: column;
     position: relative;
 
     .hero-img {
-        background-color: #1A1A1A;
+        background-color: $primary;
         width: 100%;
         height: 32.875rem;
 
@@ -19,21 +19,20 @@
     }
 
     .content {
+        @include flex-center;
         position: absolute;
-        display: flex;
-        align-items: center;
         flex-direction: column;
         gap: 2rem;
 
         h4 {
-            color: #fff;
+            color: $white;
             font-size: 3rem;
             font-weight: 600;
             text-align: center;
         }
 
         p {
-            color: #fff;
+            color: $white;
             font-size: 0.75rem;
             font-weight: 400;
             line-height: 1.75rem;
@@ -44,8 +43,8 @@
             display: flex;
             align-items: center;
             gap: 0.625rem;
-            background-color: #E7C873;
-            color: #1A1A1A;
+            background-color: $yellow;
+            color: $primary;
             padding: 0.75rem 1.2rem;
             border: none;
             border-radius: 0.5rem;
@@ -56,8 +55,8 @@
 
             &:hover {
                 background-color: transparent;  
-                color: #fff;
-                border: 2px solid #E7C873;
+                color: $white;
+                border: 2px solid $yellow;
                 
             }
 
