--- a/src/app/landing-page/how-it-works/how-it-works.component.scss
+++ b/src/app/landing-page/how-it-works/how-it-works.component.scss
@@ -1,11 +1,10 @@
+@import '../../../styles.scss';
+
 .how_it_work {
+    @include justify-center;
     max-width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     flex-direction: column;
     padding: 6% 10%;
-    background-color: #FFF8F6;
     gap: 4rem;
 
     .header {
