--- a/src/app/landing-page/testimonial/testimonial.component.scss
+++ b/src/app/landing-page/testimonial/testimonial.component.scss
@@ -1,3 +1,5 @@
+@import '../../../styles.scss';
+
 .testimonial {
     width: 100%;
     height: 100vh;
@@ -5,7 +7,7 @@
     flex-direction: column;
     padding: 6% 10%;
     gap: 4rem;
-    background-color: #F9FAFB;
+    background-color: $header;
 
     .header {
         text-align: center;
@@ -94,7 +96,7 @@
         .testimonial-content {
 
             img {
-                width: 80px;
+                width: 5rem;
                 cursor: pointer;
                 transition: transform 0.3s;
                 animation: verticalMotion 3s infinite alternate ease-in-out;
@@ -116,8 +118,8 @@
             .tooltip {
                 visibility: hidden;
                 width: 12.5rem;
-                background-color: white;
-                color: #1a1a1a;
+                background-color: $white;
+                color: $primary;
                 text-align: center;
                 font-size: 0.875rem;
                 border-radius: 0.313rem;
@@ -138,7 +140,7 @@
                     transform: rotate(180deg);
                     border-width: 0.375rem;
                     border-style: solid;
-                    border-color: #1a1a1a transparent transparent transparent;
+                    border-color: $primary transparent transparent transparent;
                 }
             }
 
