--- a/src/app/shared/back-to-top/back-to-top.component.scss
+++ b/src/app/shared/back-to-top/back-to-top.component.scss
@@ -1,17 +1,17 @@
+@import '../../../styles.scss';
+
 .top-icon {
     display: none;
     position: fixed;
     top: 50%;
     right: 3%;
     z-index: 99;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @include justify-center;
     width: 2.813rem;
     height: 2.813rem;
     border: none;
     border-radius: 50%;
-    background-color: #E7C873;
+    background-color: $yellow;
     cursor: pointer;
 
     img {
