--- a/src/app/shared/listing-card/listing-card.component.scss
+++ b/src/app/shared/listing-card/listing-card.component.scss
@@ -1,3 +1,5 @@
+@import '../../../styles.scss';
+
 .listing-card {
     max-width: 100%;
     position: relative;
@@ -12,16 +14,15 @@
     }
 
     .sale_type {
+        @include flex-center;
         position: absolute;
         top: 5%;
         left: 3%;
-        display: flex;
-        align-items: center;
         gap: 0.625rem;
 
         .btn {
-            background-color: #1A1A1A;
-            color: #fff;
+            background-color: $primary;
+            color: $white;
             padding: 0.4rem 0.75rem;
             border: none;
             border-radius: 3.125rem;
@@ -32,20 +33,20 @@
             text-transform: uppercase;
   
             &:hover {
-                background-color: #fff;
-                color: #1A1A1A;
-                border: 2px solid #1A1A1A;
+                background-color: $white;
+                color: $primary;
+                border: 2px solid $primary;
             }
         }
 
         .yellow-color {
-            background-color: #E7C873;
-            color: #1A1A1A;
+            background-color: $yellow;
+            color: $primary;
 
             &:hover {
-                background-color: #1A1A1A;
-                color: #fff;
-                border: 2px solid #E7C873;
+                background-color: $primary;
+                color: $white;
+                border: 2px solid $yellow;
             }
         }
     }
@@ -55,7 +56,7 @@
         position: absolute;
         bottom: 5%;
         left: 3%;
-        background-color: #fff;
+        background-color: $white;
         border: none;
         border-radius: 0.5rem;
         padding: 1rem;
@@ -69,8 +70,7 @@
         }
 
         .street {
-            display: flex;
-            align-items: center;
+            @include flex-center;
             gap: 0.625rem;
 
             p {
@@ -79,13 +79,11 @@
         }
 
         .details {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
+            @include justify-between;
 
             h6 {
                 font-weight: 700;
-                color: #EB664E;
+                color: $orange;
                 font-size: 1rem;
             }
 
@@ -95,11 +93,10 @@
                 gap: 0.625rem;
 
                 span {
-                    display: flex;
-                    align-items: center;
+                    @include flex-center;
                     gap: 0.5rem; 
                     padding: 0 0.625rem;
-                    border-right: 1px solid #918c8c;
+                    border-right: 1px solid $secondary;
 
                     &:last-child {
                         border-right: none;
