--- a/src/app/landing-page/how-it-works/how-it-works.component.scss
+++ b/src/app/landing-page/how-it-works/how-it-works.component.scss
@@ -6,6 +6,7 @@
     flex-direction: column;
     padding: 6% 10%;
     gap: 4rem;
+    background-color: #FFF8F6;
 
     .header {
         text-align: center;
