--- a/src/app/landing-page/about/about.component.scss
+++ b/src/app/landing-page/about/about.component.scss
@@ -3,47 +3,66 @@
 .about {
     @include justify-center;
     flex-direction: column;
-    padding: 6% 0;
+    padding: 3% 0;
     color: $primary;
     gap: 2rem;
 
-    .header {
-        text-align: center;
+    .color {
+        background-color: #FDEEEC;
+        width: 80%;
+        padding: 6%;
+        border-radius: 1rem;
 
-        h2 {
-            text-transform: capitalize;
-            font-size: 2rem;
-            margin-bottom: 0.3rem;
-        }
-    }
-
-    .reason {
-        width: 65%;
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-        gap: 1.5rem;
-
-        .content {
-            @include flex-center;
-            flex-direction: column;
-            gap: 0.625rem;
-
-            h5 {
-                text-align: center;
-                font-size: 1.2rem;
+        .header {
+            text-align: center;
+    
+            h2 {
+                text-transform: capitalize;
+                font-size: 2rem;
+                margin-bottom: 0.3rem;
             }
 
             p {
-                text-align: center;
-                font-size: 0.8rem;
+                font-size: 0.875rem;
+            }
+        }
+    
+        .reason {
+            margin-top: 3rem;
+            width: 100%;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 1.5rem;
+    
+            .content {
+                @include flex-center;
+                flex-direction: column;
+                gap: 0.625rem;
+    
+                h5 {
+                    text-align: center;
+                    font-size: 1.2rem;
+                }
+    
+                p {
+                    text-align: center;
+                    font-size: 0.8rem;
+                }
             }
         }
     }
+    
+
+    
 }
 
 @media screen and (max-width: 600px) {
     .about {
         width: 100%;
         padding: 12%;
+
+        .color {
+            width: 100%;
+        }
     }
 }
