component updated with a new div element

--- a/src/app/landing-page/about/about.component.html
+++ b/src/app/landing-page/about/about.component.html
@@ -1,5 +1,6 @@
 <section class="about">
-   <div class="header">
+   <div class="color">
+    <div class="header">
         <h2>why you should work with us</h2>
         <p>
             Access thousands of home listings from verified sources, updated <br>
@@ -22,5 +23,6 @@
             <h5>Trusted by Thousands</h5>
             <p>We offer you free consultancy to get a loan for our new home.</p>
         </div>
+   </div>
    </div>
 </section>
