--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,6 +44,17 @@ body {
     background-color: $white;
 }
 
+body[data-theme='dark'] {
+    background-color: $primary;
+    color: $white;
+    filter: brightness(0) invert(1);
+}
+
+body[data-theme='light'] {
+    background-color: $white;
+    color: $primary;
+}
+
 a {
     text-decoration: none;
 }
