theme switcher component added

--- a/src/app/landing-page/home/home.component.html
+++ b/src/app/landing-page/home/home.component.html
@@ -14,6 +14,7 @@
                 <a href="#about_us">About us</a>
                 <a href="#listing">Listing</a>
                 <a href="#testimonial">Testimonial</a>
+                <app-theme-switcher/>
             </nav>
             <div class="image">
                 <img src="logo.svg" alt="logo">
