--- a/src/app/landing-page/home/home.component.scss
+++ b/src/app/landing-page/home/home.component.scss
@@ -151,9 +151,7 @@
       left: 0;
       bottom: 0;
       padding: 1.5% 4%;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
+      @include justify-between;
       color: $primary;
       background-color: $yellow;
       border: none;
