--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -57,7 +57,7 @@
                     <div *ngIf="loginForm.get('password')?.invalid && loginForm.get('password')?.touched">password is not strong enough</div>
                 </div>
             </div>
-            <button type="submit">Login</button>
+            <button type="submit" [disabled]="loginForm.invalid || loading">Login</button>
             <p>
                 Don't have an account? 
                 <span routerLink="/auth/register">Register</span>
