valid and disabled classes defined

--- a/src/app/auth/register/register.component.scss
+++ b/src/app/auth/register/register.component.scss
@@ -90,6 +90,10 @@
                         cursor: pointer;
                         border: 1px solid $primary;
                     }
+
+                    &:valid {
+                        border: 1.5px solid #039855;
+                    }
                 }
 
                 .error {
@@ -122,6 +126,11 @@
 
                 &:hover {
                     background-color: $secondary;
+                }
+
+                &:disabled {
+                    background-color: #757575;
+                    cursor: not-allowed;
                 }
             }
 
