--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -92,7 +92,9 @@
                         border: 1px solid $primary;
                     }
 
-                    
+                    &:valid {
+                        border: 1.5px solid #039855;
+                    }                    
                 }
 
                 .error {
@@ -126,6 +128,11 @@
 
                 &:hover {
                     background-color: $secondary;
+                }
+
+                &:disabled {
+                    background-color: #757575;
+                    cursor: not-allowed;
                 }
             }
 
