listing routes updated

--- a/src/app/landing-page/home/home.component.html
+++ b/src/app/landing-page/home/home.component.html
@@ -38,7 +38,7 @@
                 <h2>find your dream home <br> with ease</h2>
                 <h6>Browse thousands of home listings, tailored to your preferences</h6>
                 <span class="browse">
-                    <a routerLink="/properties">Browse more properties</a>
+                    <a routerLink="/listings">Browse more properties</a>
                     <img src="right-arrow.svg" alt="right_arrow">
                 </span>
             </div>
@@ -64,5 +64,5 @@
     <app-discover/>
     <app-testimonial id="testimonial"/>
     <app-footer/>
-    <app-back-to-top/> 
+    <app-back-to-top/>
 </div>
