filter navigations template defined

--- a/src/app/home-listing/home-listings/home-listings.component.html
+++ b/src/app/home-listing/home-listings/home-listings.component.html
@@ -1,6 +1,7 @@
 <div class="home-listing">
     <app-nav-header/>
-    <div class="filter-container">
+
+    <div class="filter-container" id="filter">
         <div class="search">
             <input 
                 type="search"
@@ -125,5 +126,9 @@
             </div>
         </div>
         <button type="button" class="search-btn">Search</button>
-    </div>                                  
+    </div> 
+
+    <div class="outlet">
+        <app-properties/>
+    </div>
 </div>
