--- a/src/app/shared/nav-header/nav-header.component.scss
+++ b/src/app/shared/nav-header/nav-header.component.scss
@@ -125,13 +125,7 @@ header {
 }
 
 header.scrolled {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 50;
-    border-radius: 0;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    display: none;
 }
 
 @media screen and (max-width: 998px)  {
