footer component imported

--- a/src/app/home-listing/home-listings/home-listings.component.html
+++ b/src/app/home-listing/home-listings/home-listings.component.html
@@ -23,6 +23,10 @@
                     <input type="radio" id="sale" aria-label="sale">
                     <h5>For Sale</h5>
                 </span>
+                <span>
+                    <input type="radio" id="sold" aria-label="sold">
+                    <h5>Sold</h5>
+                </span>
             </div>
         </div>
         <div class="price status">
@@ -132,3 +136,4 @@
         <app-properties/>
     </div>
 </div>
+<app-footer/>
