listing card removed

--- a/src/app/landing-page/listing/listing.component.html
+++ b/src/app/landing-page/listing/listing.component.html
@@ -8,14 +8,14 @@
         </p>
    </div>
    <div class="card">
+        <!-- <app-listing-card/>
         <app-listing-card/>
         <app-listing-card/>
         <app-listing-card/>
         <app-listing-card/>
         <app-listing-card/>
         <app-listing-card/>
-        <app-listing-card/>
-        <app-listing-card/>
+        <app-listing-card/> -->
    </div>
    <button routerLink="/listings" type="button" class="listing-btn">
         See All Listing
